# cpp-builder-pattern

./: CMakeLists.txt  README.md  local-build.cmd
include/: emailbuilder.hpp
include/email/: builder.hpp  email.hpp
src/: main.cpp
src/email/: builder.cpp  email.cpp
